# xmind-converter

./: .gitignore  LICENSE  README-cn.md  README.md  pyproject.toml  requirements.txt  setup.py
data/: example_v7.5.xmind  example_v8.xmind  sports_example.xmind  sports_v6.xmind  sports_v75.xmind  sports_v8.csv  sports_v8.html  sports_v8.json  sports_v8.md  sports_v8.xmind
docs/: api.md  index.md  usage.md
tests/: test_cli.py  test_converters.py  test_core.py  test_parsers.py  test_print.py
xmind_converter/: __init__.py  cli.py  core.py  exceptions.py  models.py
xmind_converter/converters/: __init__.py  base_converter.py  csv_converter.py  html_converter.py  json_converter.py  md_converter.py  xmind_converter.py
xmind_converter/parsers/: __init__.py  base_parser.py  csv_parser.py  html_parser.py  json_parser.py  md_parser.py  xmind_parser.py
xmind_converter/utils/: __init__.py  common.py
